<resources>
    <string name="app_name">CS213_P5</string>
    <string name="logo_alt">RU Cafe Logo</string>
    <string name="action_prompt">What do you want to do?</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="finalize_order">View or Finalize Order</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="order_coffee_title">Order Coffee</string>
    <string name="donut_type">Type:</string>
    <string name="donut_flavor">Flavor:</string>
    <string name="size">Size:</string>
    <string name="cream">Cream</string>
    <string name="add_ins">Add-Ins:</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity:</string>
    <string name="submit">Submit</string>
    <string name="donut_subtotal">Subtotal: $1.59</string>
    <string name="subtotal">Subtotal: $1.69</string>
    <string name="title_order_donuts">Order Donuts</string>
    <string name="title_view_order">View Order</string>
    <string name="btn_remove_item">Remove Item</string>
    <string name="btn_submit_order">Submit Order</string>
    <string name="order_subtotal">Subtotal: $0.00</string>
    <string name="order_tax">Tax: $0.00</string>
    <string name="order_total">Total: $0.00</string>
    <string name="all_orders_cancel">Cancel Order</string>
</resources>